--- a/springapp/pom.xml
+++ b/springapp/pom.xml
@@ -15,6 +15,11 @@
             <version>LATEST</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.0.4.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
